--- a/Switchboard.UI/MainWindow.xaml
+++ b/Switchboard.UI/MainWindow.xaml
@@ -4,11 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}"
         Title="Local Services Monitor" Height="350" Width="525">
     <Grid>
         <StackPanel>
-            <TextBlock Name="StatusLabel" Padding="5" Text="Loading..." />
-            <TextBlock Name="StatusDisplay" Padding="5" Height="Auto" />
+            <TextBlock Name="TestUrl" Padding="5" Text="{Binding TestUrl, Mode=OneWay}"/>
+            <Rectangle Fill="Orange" Width="Auto" Height="2"></Rectangle>
+            <ScrollViewer HorizontalScrollBarVisibility="Auto">
+                <TextBlock Name="StatusDisplay" Text="{Binding Status, Mode=OneWay}" Padding="5" Height="Auto" />
+            </ScrollViewer>
         </StackPanel>
     </Grid>
 </Window>
