--- a/Switchboard.UI/MainWindow.xaml
+++ b/Switchboard.UI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}"
-        Title="Local Services Monitor" Height="600" Width="800">
+        Title="Local Services Monitor" Height="400" Width="800">
     <Grid>
         <StackPanel>
             <Grid>
@@ -24,8 +24,8 @@
                 <Button Grid.Column="2" Grid.Row="1" Command="{Binding StopCommand}"  Width="50" Content="Stop" Visibility="{Binding Running, Converter={StaticResource BooleanToVisibilityConverter}}" />
             </Grid>
             <Rectangle Fill="Orange" Width="Auto" Height="2"></Rectangle>
-            <ScrollViewer VerticalScrollBarVisibility="Visible"  CanContentScroll="True" >
-                <TextBlock Name="StatusDisplay" Text="{Binding Status, Mode=OneWay}" Padding="5" Height="500" />
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" >
+                <TextBlock Name="StatusDisplay" Text="{Binding Status, Mode=OneWay}" Padding="5" Height="Auto" />
             </ScrollViewer>
         </StackPanel>
     </Grid>
